add character icons to SelectCharacter screen

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -503,8 +503,8 @@ CropWidth=146
 InitCommand=horizalign,left;vertalign,top;shadowlength,2;zoom,0.5;
 
 [ScreenInstructions]
-#NextScreenArcade=ScreenSelectMusic
-NextScreenArcade=ScreenSelectCharacter
+NextScreenArcade=ScreenSelectMusic
+#NextScreenArcade=ScreenSelectCharacter
 NextScreenNonstop=ScreenSelectCourse
 NextScreenOni=ScreenSelectCourse
 NextScreenEndless=ScreenSelectCourse
@@ -2385,20 +2385,22 @@ TitleP1OnCommand=x,140;y,80;addx,-400;bounceend,0.5;addx,400
 TitleP1OffCommand=sleep,0.2;bouncebegin,0.5;addx,-400
 TitleP2OnCommand=x,500;y,80;addx,400;bounceend,0.5;addx,-400
 TitleP2OffCommand=sleep,0.2;bouncebegin,0.5;addx,400
-CharacterP1OnCommand=x,140;y,180;addx,-400;bounceend,0.5;addx,400
-CharacterP1OffCommand=sleep,0.2;bouncebegin,0.5;addx,-400
-CharacterP2OnCommand=x,500;y,180;addx,400;bounceend,0.5;addx,-400
-CharacterP2OffCommand=sleep,0.2;bouncebegin,0.5;addx,400
-CharacterArrowsP1OnCommand=x,140;y,180;diffusealpha,0;linear,0.3;diffusealpha,1
-CharacterArrowsP1OffCommand=linear,0.3;diffusealpha,0
-CharacterArrowsP2OnCommand=x,500;y,180;diffusealpha,0;linear,0.3;diffusealpha,1
-CharacterArrowsP2OffCommand=linear,0.3;diffusealpha,0
+CardP1OnCommand=x,140;y,180;addx,-400;bounceend,0.5;addx,400
+CardP1OffCommand=sleep,0.2;bouncebegin,0.5;addx,-400
+CardP2OnCommand=x,500;y,180;addx,400;bounceend,0.5;addx,-400
+CardP2OffCommand=sleep,0.2;bouncebegin,0.5;addx,400
+CardArrowsP1OnCommand=x,140;y,180;diffusealpha,0;linear,0.3;diffusealpha,1
+CardArrowsP1OffCommand=linear,0.3;diffusealpha,0
+CardArrowsP2OnCommand=x,500;y,180;diffusealpha,0;linear,0.3;diffusealpha,1
+CardArrowsP2OffCommand=linear,0.3;diffusealpha,0
 ExplanationOnCommand=x,320;y,140;diffusealpha,0;linear,0.3;diffusealpha,1
 ExplanationOffCommand=linear,0.3;diffusealpha,0
 AttackFrameP1OnCommand=x,140;y,380;addx,-400;bounceend,0.5;addx,400
 AttackFrameP1OffCommand=sleep,0.2;bouncebegin,0.5;addx,-400
 AttackFrameP2OnCommand=x,500;y,380;addx,400;bounceend,0.5;addx,-400
 AttackFrameP2OffCommand=sleep,0.2;bouncebegin,0.5;addx,400
+IconWidth=40
+IconHeight=40
 IconsP1StartX=128
 IconsP1StartY=356
 IconsP2StartX=488
