--- a/stepmania/src/StepMania.RC
+++ b/stepmania/src/StepMania.RC
@@ -55,32 +55,24 @@ BEGIN
                     SS_CENTERIMAGE
 END
 
-IDD_DISASM_CRASH DIALOG  0, 0, 399, 271
+IDD_DISASM_CRASH DIALOGEX 0, 0, 399, 151
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION
 CAPTION "StepMania Error"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    DEFPUSHBUTTON   "Close",IDC_BUTTON_CLOSE,348,255,50,15
+    DEFPUSHBUTTON   "Close",IDC_BUTTON_CLOSE,348,135,50,15
     LTEXT           "crash reason: programmer needs good whack on head",
-                    IDC_STATIC_BOMBREASON,8,240,219,8
-    PUSHBUTTON      "View Log",IDC_VIEW_LOG,1,255,70,15
-    PUSHBUTTON      "View crash dump",IDC_CRASH_SAVE,75,255,70,15
-    PUSHBUTTON      "Report the Error",IDC_BUTTON_REPORT,210,255,76,15
-    PUSHBUTTON      "Restart",IDC_BUTTON_RESTART,348,238,50,15
+                    IDC_STATIC_BOMBREASON,8,120,219,8
+    PUSHBUTTON      "View Log",IDC_VIEW_LOG,1,135,70,15
+    PUSHBUTTON      "View crash dump",IDC_CRASH_SAVE,75,135,70,15
+    PUSHBUTTON      "Report the Error",IDC_BUTTON_REPORT,210,135,76,15
+    PUSHBUTTON      "Restart",IDC_BUTTON_RESTART,348,118,50,15
     CONTROL         121,IDC_STATIC,"Static",SS_BITMAP,1,2,396,36
     LTEXT           "StepMania has crashed due to a program error.  Diagnostic information has been saved to a file called ""crashinfo.txt"" in the StepMania program directory.  Hit ""View crash dump"" to view it. Please include this file in all bug reports.",
                     IDC_STATIC,8,41,382,19
-    LTEXT           "Program disassembly",IDC_STATIC,7,64,66,8
-    LISTBOX         IDC_ASMBOX,7,76,279,101,LBS_OWNERDRAWVARIABLE | 
-                    LBS_USETABSTOPS | LBS_NOINTEGRALHEIGHT | LBS_NODATA | 
-                    LBS_NOSEL | WS_VSCROLL | WS_TABSTOP
-    LISTBOX         IDC_CALL_STACK,7,196,279,38,LBS_NOINTEGRALHEIGHT | 
+    LISTBOX         IDC_CALL_STACK,7,76,391,38,LBS_NOINTEGRALHEIGHT | 
                     WS_VSCROLL | WS_TABSTOP
-    LTEXT           "CPU registers",IDC_STATIC,292,64,44,8
-    LISTBOX         IDC_REGDUMP,291,76,101,158,NOT LBS_NOTIFY | 
-                    LBS_NOINTEGRALHEIGHT | LBS_NOSEL | WS_VSCROLL | 
-                    WS_HSCROLL | WS_TABSTOP
-    LTEXT           "Estimated call stack",IDC_STATIC,7,184,64,8
+    LTEXT           "Estimated call stack",IDC_STATIC,7,64,64,8
 END
 
 IDD_OK DIALOG  0, 0, 318, 87
@@ -119,7 +111,7 @@ BEGIN
         LEFTMARGIN, 1
         RIGHTMARGIN, 398
         VERTGUIDE, 286
-        BOTTOMMARGIN, 270
+        BOTTOMMARGIN, 150
     END
 
     IDD_OK, DIALOG
