--- a/stepmania/src/StepMania.vcproj
+++ b/stepmania/src/StepMania.vcproj
@@ -994,6 +994,12 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 						RelativePath="arch\MovieTexture\MovieTexture_DShowHelper.h">
 					</File>
 					<File
+						RelativePath="arch\MovieTexture\MovieTexture_FFMpeg.cpp">
+					</File>
+					<File
+						RelativePath="arch\MovieTexture\MovieTexture_FFMpeg.h">
+					</File>
+					<File
 						RelativePath="arch\MovieTexture\MovieTexture_Null.cpp">
 					</File>
 					<File
