Hopefully fix GroupList tweening weirdness

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -486,8 +486,10 @@ StartX=0
 StartY=-136
 SpacingX=0
 SpacingY=28
-GainFocusCommand=glowshift;effectperiod,0.5;linear,0.2;x,-40
-LoseFocusCommand=stoptweening;stopeffect;linear,0.2;x,0
+GainFocusGroupCommand=stoptweening;linear,0.2;x,-40
+LoseFocusGroupCommand=stoptweening;linear,0.2;x,0
+GainFocusItemCommand=glowshift;effectperiod,0.5
+LoseFocusItemCommand=stopeffect
 HideItemCommand=linear,0.2;diffusealpha,0
 ShowItemCommand=stoptweening;linear,0.2;diffusealpha,1;zoom,1.0;
 # This just selects the type of tweening used for scrolling the list; it shouldn't actually
