--- a/stepmania/Themes/default/Fonts/_korean 16px.ini
+++ b/stepmania/Themes/default/Fonts/_korean 16px.ini
@@ -30,4 +30,33 @@ line 2=키타틴파팍패플피
 line 3=하허혁현혠화정꿔
 line 4=와부담별컨츄꼬벡
 line 5=호심아름다운대한
-line 6=민국성숙
+line 6=민국성숙가감강같
+line 7=거건검게곡과구그
+
+[jamo 3]
+Top=8
+Baseline=23
+LineSpacing=20
+DefaultWidth=20
+
+line 0=김께꼭꾸꿍난널네
+line 1=녀논눈님더돌둥드
+line 2=들따때또뛰띠렁렛
+line 3=룰른만말면모몰뫼
+line 4=뭐미발밴봐비뻐뻤
+line 5=뿌상소속수싫않알
+line 6=양억언엄업여연예
+line 7=오올우울원은을의
+
+
+[jamo 4]
+Top=8
+Baseline=23
+LineSpacing=20
+DefaultWidth=20
+
+line 0=잊제젝조존좋줘증
+line 1=진집짜착찬처추칼
+line 2=큰탑터투트티펌페
+line 3=폼핑할함해행헤혀
+line 4=환회휘女태난터
