--- a/stepmania/Themes/default/Fonts/_japanese 24px.ini
+++ b/stepmania/Themes/default/Fonts/_japanese 24px.ini
@@ -61,4 +61,13 @@ line 3=藤希聖剣私卵焼琴
 line 4=乃歩菊裕樹敏光康
 line 5=典玉置成実篠天体
 line 6=観測綾岩琢長沼英
-line 7=夏秋冬連花
+line 7=夏秋冬連花夢式情
+
+[kanji 4]
+Top=5
+Baseline=26
+LineSpacing=28
+DefaultWidth=28
+
+line 0=惡憎敎有析武死生
+line 1=男眠胎自魂
