--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -51,7 +51,8 @@ ColorSelected=0.5,1,0.5,1
 ZoomNotSelected=1.0
 ZoomSelected=1.3
 MenuTextAlign=1  // 0=left, 1=center, 2=right
-MenuCommandOnCreate=
+MenuCommandOnCreate=diffusealpha,0;sleep,0.1;linear,0.5;diffusealpha,1;
+MenuCommandSelectDelay=0.5
 SecondsBetweenComments=12
 SecondsBeforeAttract=30
 HelpTextHome=Use &UP; &DOWN; to select, then press START
