--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1886,7 +1886,7 @@ MenuTimer=Turn this &oq;OFF&cq; to disable the time limit in menus.
 SongsPerPlay=The number of songs a player can play in Arcade mode.::Set this to &oq;Unlimited&cq;, and you can continue playing forever.::Also, when this option is set to &oq;Unlimited&cq;, failing will take you::back to the the Select Music or Select Course screen.
 ScoringType=Defines which scoring method to use.
 JudgeDifficulty=Increase this value to cause your steps to be judged more strictly::(i.e. shrink the timing window).
-LifeDifficulty=Increate this value to cause your life meter to::drain faster and refill slower.
+LifeDifficulty=Increase this value to cause your life meter to::drain faster and refill slower.
 ProgressiveLifebar=Set whether the lifebar is harsher on consecutive boo/miss judgments.::OFF for no effect, 8 to make each consecutive miss a multiple of the first miss.
 ProgressiveStageLifebar=Determine whether the lifebar gets harsher on later stages.::  LifeDifficulty + this = Lifedifficulty on a final stage.  Has no::effect on event mode.
 ProgressiveNonstopLifebar=Determine whether the lifebar gets harsher as a nonstop course::progresses.  LifeDifficulty + this = Lifedifficulty on a final stage of a course.
