Add metric to determine default lyrics color

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -927,6 +927,7 @@ LyricsReverseY=100
 # This is used if one player is in reverse and the other isn't.
 LyricsOneReverseX=320
 LyricsOneReverseY=35
+LyricsDefaultColor=0,1,0,1
 ActiveItemsP1X=0
 ActiveItemsP1Y=0
 ActiveItemsP1OnCommand=
