Err, missing metrics.

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1807,6 +1807,8 @@ NextTheme=Left,Left,Left,Right,Right,Right,Left,Right
 NextAnnouncer=Left,Left,Right,Right,Left,Left,Right,Right
 Hidden=
 RandomVanish=
+NextBannerGroup=
+NextBannerGroup2=
 
 [GrooveRadar]
 Label1OffsetX=0		// stream
