working on profiles stored on machine (intermediate step toward memory card support)

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1953,6 +1953,13 @@ HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::
 AutogenMissingTypes=Show steps for songs that were created by Autogen.
 AutogenGroupCourses=Show group Nonstop and Endless courses that::were created by Autogen.
 
+[ScreenProfileOptions]
+HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
+Player1Profile=
+Player2Profile=
+CreateNew=
+Delete=
+
 [ScreenUnlock]
 UseUnlocksDat=1
 TypeOfPointsToDisplay=DP
@@ -2265,7 +2272,7 @@ AppearanceOptions=
 SoundOptions=
 AutogenOptions=
 BackgroundOptions=
-AutoAdjustGraphicDetail=
+ProfileOptions=
 ReloadSongs/Courses=
 
 [TextBanner]
