--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2156,15 +2156,18 @@ NextScreen=ScreenHowToPlay
 [ScreenHowToPlay]
 NextScreen=ScreenDemonstration
 SecondsToShow=25
-SongBPM=100
-NumPerfects=4
-NumMisses=6
+UseLifeMeterBar=1
 LifeMeterBarOnCommand=x,480;y,40;addy,-60;sleep,2.4;linear,0.2;addy,60
 UseCharacter=1
 CharacterOnCommand=Zoom,20;X,120;Y,400;addy,-500;sleep,6.0;decelerate,0.4;addy,500
 UsePad=1
 PadOnCommand=X,40;Y,310;Zoom,15;RotationY,180;sleep,4.7;linear,1.0;RotationY,360;Zoom,20;X,230;Y,390
+UseNotefield=1
+Stepfile=ScreenHowToPlay steps.sm
 PlayerX=480
+SongBPM=100
+NumPerfects=4
+NumMisses=6
 
 [ScreenDemonstration]
 SecondsToShow=30
