Make the character icons tween on and off properly.

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2418,16 +2418,22 @@ AttackFrameP1OnCommand=x,140;y,380;addx,-400;bounceend,0.5;addx,400
 AttackFrameP1OffCommand=sleep,0.2;bouncebegin,0.5;addx,-400
 AttackFrameP2OnCommand=x,500;y,380;addx,400;bounceend,0.5;addx,-400
 AttackFrameP2OffCommand=sleep,0.2;bouncebegin,0.5;addx,400
-IconWidth=40
-IconHeight=40
-IconsP1StartX=128
-IconsP1StartY=356
-IconsP2StartX=488
-IconsP2StartY=356
-IconsSpacingX=42
-IconsSpacingY=32
+AttackIconWidth=40
+AttackIconHeight=40
+AttackIconsP1StartX=128
+AttackIconsP1StartY=356
+AttackIconsP2StartX=488
+AttackIconsP2StartY=356
+AttackIconsSpacingX=42
+AttackIconsSpacingY=32
 # DO NOT set absolute X or Y coords in these tweens. they are set based on
 # the above 6 metrics. you can use addx and addy still.
+AttackIconsP1OnCommand=addx,-400;bounceend,0.5;addx,400
+AttackIconsP1OffCommand=sleep,0.2;bouncebegin,0.5;addx,-400
+AttackIconsP2OnCommand=addx,400;bounceend,0.5;addx,-400
+AttackIconsP2OffCommand=sleep,0.2;bouncebegin,0.5;addx,400
+IconWidth=40
+IconHeight=40
 IconsP1OnCommand=addx,-400;bounceend,0.5;addx,400
 IconsP1OffCommand=sleep,0.2;bouncebegin,0.5;addx,-400
 IconsP2OnCommand=addx,400;bounceend,0.5;addx,-400
