Added Title/Subtitle/Artist texts to ez2 music select

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -711,6 +711,12 @@ InfoFrameX=999
 InfoFrameY=999
 GroupNameX=320
 GroupNameY=55
+TitleX=320
+TitleY=80
+SubTitleX=999
+SubTitleY=999
+ArtistX=999
+ArtistY=999
 DifficultyRatingX=999
 DifficultyRatingY=999
 DifficultyRatingOrientation=0
@@ -1805,10 +1811,14 @@ Dark=
 CancelAll=Left,Right,Left,Right,Left,Right,Left,Right
 NextTheme=Left,Left,Left,Right,Right,Right,Left,Right
 NextAnnouncer=Left,Left,Right,Right,Left,Left,Right,Right
+NextBannerGroup=MenuUp,MenuRight,MenuRight
+NextBannerGroup2=MenuUp,MenuDown,MenuUp,MenuDown
 Hidden=
 RandomVanish=
-NextBannerGroup=
-NextBannerGroup2=
+NextBannerGroup=MenuUp,MenuRight,MenuRight
+NextBannerGroup2=MenuUp,MenuDown,MenuUp,MenuDown
+// next banner group is used only in the banner song select, doesnt interfere
+// with other song select.
 
 [GrooveRadar]
 Label1OffsetX=0		// stream
@@ -1872,6 +1882,9 @@ OutCommand=linear,0.20;zoomy,0;diffusealpha,1
 
 [ScoreKeeperRave]
 AttackDurationSeconds=10
+
+[ScreenSelectMaster]
+TimerSeconds=20
 
 [ScreenInputOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
