Update the Makefile for the native WAV decoder.

--- a/stepmania/src/Makefile.am
+++ b/stepmania/src/Makefile.am
@@ -160,12 +160,12 @@ Rage = $(Helpers) $(PCRE)\
 RageBitmapTexture.cpp RageBitmapTexture.h RageDisplay.cpp RageDisplay.h RageDisplay_OGL.cpp RageDisplay_OGL.h \
 RageException.cpp RageException.h RageFile.cpp RageFile.h RageInput.cpp RageInput.h \
 RageInputDevice.cpp RageInputDevice.h RageLog.cpp RageLog.h RageMath.cpp RageMath.h RageSound.cpp RageSound.h \
-RageSoundManager.cpp RageSoundManager.h RageSoundReader.h RageSoundReader_FileReader.h \
+RageSoundManager.cpp RageSoundManager.h RageSoundReader.cpp RageSoundReader.h RageSoundReader_FileReader.h \
 RageSoundReader_Preload.cpp RageSoundReader_Preload.h RageSoundReader_Resample.cpp RageSoundReader_Resample.h \
-RageSoundReader_SDL_Sound.cpp RageSoundReader_SDL_Sound.h RageSoundResampler.cpp RageSoundResampler.h \
-RageSounds.cpp RageSounds.h RageTexture.cpp RageTexture.h RageTextureManager.cpp RageTextureManager.h \
-RageThreads.cpp RageThreads.h RageTimer.cpp RageTimer.h RageTypes.h RageUtil.cpp RageUtil.h \
-RageUtil_CharConversions.cpp RageUtil_CharConversions.h RageUtil_FileDB.cpp RageUtil_FileDB.h
+RageSoundReader_SDL_Sound.cpp RageSoundReader_SDL_Sound.h RageSoundReader_WAV.cpp RageSoundReader_WAV.h \
+RageSoundResampler.cpp RageSoundResampler.h RageSounds.cpp RageSounds.h RageTexture.cpp RageTexture.h \
+RageTextureManager.cpp RageTextureManager.h RageThreads.cpp RageThreads.h RageTimer.cpp RageTimer.h RageTypes.h \
+RageUtil.cpp RageUtil.h RageUtil_CharConversions.cpp RageUtil_CharConversions.h RageUtil_FileDB.cpp RageUtil_FileDB.h
 
 Actors = \
 Actor.cpp Actor.h ActorCollision.h ActorFrame.cpp ActorFrame.h ActorScroller.cpp ActorScroller.h \
