--- a/stepmania/src/StepMania.vcproj
+++ b/stepmania/src/StepMania.vcproj
@@ -1585,6 +1585,12 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 				RelativePath="RageSoundReader_FileReader.h">
 			</File>
 			<File
+				RelativePath="RageSoundReader_MP3.cpp">
+			</File>
+			<File
+				RelativePath="RageSoundReader_MP3.h">
+			</File>
+			<File
 				RelativePath="RageSoundReader_Preload.cpp">
 			</File>
 			<File
