add conditional MP3

--- a/stepmania/src/Makefile.am
+++ b/stepmania/src/Makefile.am
@@ -123,6 +123,14 @@ else
 Arch += arch/arch_linux.h
 endif
 
+RageSoundFileReaders = \
+RageSoundReader_SDL_Sound.cpp RageSoundReader_SDL_Sound.h \
+RageSoundReader_WAV.cpp RageSoundReader_WAV.h 
+
+if HAVE_MP3
+RageSoundFileReaders += RageSoundReader_MP3.cpp RageSoundReader_MP3.h
+endif
+
 ActorsInGameplayAndMenus = \
 BGAnimation.cpp BGAnimation.h BGAnimationLayer.cpp BGAnimationLayer.h Banner.cpp Banner.h \
 DifficultyIcon.cpp DifficultyIcon.h MeterDisplay.cpp MeterDisplay.h Transition.cpp Transition.h
@@ -162,11 +170,11 @@ RageException.cpp RageException.h RageFile.cpp RageFile.h RageInput.cpp RageInpu
 RageInputDevice.cpp RageInputDevice.h RageLog.cpp RageLog.h RageMath.cpp RageMath.h RageSound.cpp RageSound.h \
 RageSoundManager.cpp RageSoundManager.h RageSoundReader.cpp RageSoundReader.h RageSoundReader_FileReader.h \
 RageSoundReader_Preload.cpp RageSoundReader_Preload.h RageSoundReader_Resample.cpp RageSoundReader_Resample.h \
-RageSoundReader_SDL_Sound.cpp RageSoundReader_SDL_Sound.h \
-RageSoundReader_WAV.cpp RageSoundReader_WAV.h RageSoundResampler.cpp RageSoundResampler.h RageSounds.cpp RageSounds.h \
+RageSoundResampler.cpp RageSoundResampler.h RageSounds.cpp RageSounds.h \
 RageTexture.cpp RageTexture.h RageTextureManager.cpp RageTextureManager.h RageThreads.cpp RageThreads.h \
 RageTimer.cpp RageTimer.h RageTypes.h RageUtil.cpp RageUtil.h RageUtil_CharConversions.cpp RageUtil_CharConversions.h \
-RageUtil_FileDB.cpp RageUtil_FileDB.h
+RageUtil_FileDB.cpp RageUtil_FileDB.h \
+$(RageSoundFileReaders)
 
 Actors = \
 Actor.cpp Actor.h ActorCollision.h ActorFrame.cpp ActorFrame.h ActorScroller.cpp ActorScroller.h \
