--- a/stepmania/src/Makefile.am
+++ b/stepmania/src/Makefile.am
@@ -164,7 +164,7 @@ Rage = $(Helpers) $(PCRE)\
 RageBitmapTexture.cpp RageBitmapTexture.h RageDisplay.cpp RageDisplay.h RageDisplay_OGL.cpp RageDisplay_OGL.h \
 RageException.cpp RageException.h RageFile.cpp RageFile.h RageInput.cpp RageInput.h \
 RageInputDevice.cpp RageInputDevice.h RageLog.cpp RageLog.h RageMath.cpp RageMath.h RageSound.cpp RageSound.h \
-RageSoundManager.cpp RageSoundManager.h RageSoundReader.cpp RageSoundReader.h RageSoundReader_FileReader.h \
+RageSoundManager.cpp RageSoundManager.h RageSoundReader.h RageSoundReader_FileReader.cpp RageSoundReader_FileReader.h \
 RageSoundReader_Preload.cpp RageSoundReader_Preload.h RageSoundReader_Resample.cpp RageSoundReader_Resample.h \
 RageSoundResampler.cpp RageSoundResampler.h RageSounds.cpp RageSounds.h \
 RageTexture.cpp RageTexture.h RageTextureManager.cpp RageTextureManager.h RageThreads.cpp RageThreads.h \
