change lyrics text color

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1877,8 +1877,8 @@ BannerWidth=564
 BannerHeight=184
 
 [LyricDisplay]
-InCommand=diffusealpha,0;zoomy,0;spring,0.20;zoomy,1;diffusealpha,1
-OutCommand=linear,0.20;zoomy,0;diffusealpha,1
+InCommand=shadowlength,0;zoomy,0;spring,0.20;zoomy,1;
+OutCommand=linear,0.20;zoomy,0
 
 [ScoreKeeperRave]
 AttackDurationSeconds=10
