Add glyphs.  Remove CJK compat glyph.

--- a/stepmania/Themes/default/Fonts/_japanese 16px.ini
+++ b/stepmania/Themes/default/Fonts/_japanese 16px.ini
@@ -70,4 +70,10 @@ LineSpacing=20
 DefaultWidth=20
 
 line 0=惡憎敎有析武死生
-line 1=男眠胎自魂女
+line 1=男眠胎自魂女宏和
+line 2=
+魅惑音頭踊貸与園
+
+line 3=黙藁面鳥近浩治入
+line 4=
+尾信充乙
