This makes more sense

--- a/stepmania/PBProject/scripts/installer.config
+++ b/stepmania/PBProject/scripts/installer.config
@@ -20,7 +20,7 @@
 #
 # FILE:PATH:COND - Install the file
 # PATH - The file's path.
-# COND - If true, overwrite otherwise go with whichever is newer.
+# COND - If true, overwrite the file
 #
 # LABEL:LABEL - Only while installing.
 # LABEL - The section's name.
@@ -40,6 +40,8 @@
 # QUESTION - Ask the user a yes or no question, if yes, VAR will be set
 #            to true. Otherwise, VAR will be set to false.
 
+# Some are missing but I don't feel like adding them now
+
 
 #Get the install path
 GETPATH:install path:PATH
@@ -48,6 +50,9 @@ CD:$PATH:YES
 #Create the directory
 MKDIR:StepMania
 CD:StepMania:$INSTALLING
+
+#Ignore the CVS directories
+IGNORE:CVS
 
 #Install the files
 FILE:Announcers/instructions.txt:OVERWRITE
@@ -86,12 +91,13 @@ LABEL:LIBS
 AUTH:DID_AUTH
 IF:$DID_AUTH::AUTH_FAILED
 
-ASK:OVERWRITE:Do you want to overwrite any files you already have? If you choose "No" it will still overwrite the files but only if the ones being installed are newer than the ones you already have. If you choose "Yes" it will overwrite regardless of creation date.
+ASK:OVERWRITE:Do you want to overwrite any files you already have? If you choose "No," only new files will be installed.
 
 #install files that require privs
 PRIVILEGED:TRUE
 ECHO:Installing library files.:
 
+#CD:/:YES
 #binaries
 FILE:/usr/local/bin/cjpeg:$OVERWRITE
 FILE:/usr/local/bin/djpeg:$OVERWRITE
