Simplify SDL headers. Fix typo. Change message since there are new libraries.

--- a/stepmania/PBProject/scripts/installer.config
+++ b/stepmania/PBProject/scripts/installer.config
@@ -82,7 +82,8 @@ FILE:NEWS:OVERWRITE
 FILE:StepMania.app:OVERWRITE
 
 #Ask the user to install libaries
-ASK:INSTALL_LIBS:Would you like to install the the necessary libraries to run StepMania? If you have already installed them, choose "No".
+#ASK:INSTALL_LIBS:Would you like to install the necessary libraries to run StepMania? If you have already installed them, choose "No".
+ASK:INSTALL_LIBS:Would you like to install the necessary libraries to run StepMania? There are new versions of libraries in. Choosing "Yes" is recommended.
 IF:$INSTALL_LIBS:LIBS:END
 #nothing else for now
 GOTO:END
@@ -97,7 +98,6 @@ ASK:OVERWRITE:Do you want to overwrite any files you already have? If you choose
 PRIVILEGED:TRUE
 ECHO:Installing library files.:
 
-#CD:/:YES
 #binaries
 FILE:/usr/local/bin/cjpeg:$OVERWRITE
 FILE:/usr/local/bin/djpeg:$OVERWRITE
@@ -108,35 +108,7 @@ FILE:/usr/local/bin/rdjpgcom:$OVERWRITE
 FILE:/usr/local/bin/sdl-config:$OVERWRITE
 FILE:/usr/local/bin/wrjpgcom:$OVERWRITE
 #headers
-FILE:/usr/local/include/SDL/SDL.h:$OVERWRITE
-FILE:/usr/local/include/SDL/SDL_active.h:$OVERWRITE
-FILE:/usr/local/include/SDL/SDL_audio.h:$OVERWRITE
-FILE:/usr/local/include/SDL/SDL_byteorder.h:$OVERWRITE
-FILE:/usr/local/include/SDL/SDL_cdrom.h:$OVERWRITE
-FILE:/usr/local/include/SDL/SDL_copying.h:$OVERWRITE
-FILE:/usr/local/include/SDL/SDL_endian.h:$OVERWRITE
-FILE:/usr/local/include/SDL/SDL_error.h:$OVERWRITE
-FILE:/usr/local/include/SDL/SDL_events.h:$OVERWRITE
-FILE:/usr/local/include/SDL/SDL_getenv.h:$OVERWRITE
-FILE:/usr/local/include/SDL/SDL_image.h:$OVERWRITE
-FILE:/usr/local/include/SDL/SDL_joystick.h:$OVERWRITE
-FILE:/usr/local/include/SDL/SDL_keyboard.h:$OVERWRITE
-FILE:/usr/local/include/SDL/SDL_keysym.h:$OVERWRITE
-FILE:/usr/local/include/SDL/SDL_main.h:$OVERWRITE
-FILE:/usr/local/include/SDL/SDL_mouse.h:$OVERWRITE
-FILE:/usr/local/include/SDL/SDL_mutex.h:$OVERWRITE
-FILE:/usr/local/include/SDL/SDL_name.h:$OVERWRITE
-FILE:/usr/local/include/SDL/SDL_opengl.h:$OVERWRITE
-FILE:/usr/local/include/SDL/SDL_quit.h:$OVERWRITE
-FILE:/usr/local/include/SDL/SDL_rwops.h:$OVERWRITE
-FILE:/usr/local/include/SDL/SDL_syswm.h:$OVERWRITE
-FILE:/usr/local/include/SDL/SDL_thread.h:$OVERWRITE
-FILE:/usr/local/include/SDL/SDL_timer.h:$OVERWRITE
-FILE:/usr/local/include/SDL/SDL_types.h:$OVERWRITE
-FILE:/usr/local/include/SDL/SDL_version.h:$OVERWRITE
-FILE:/usr/local/include/SDL/SDL_video.h:$OVERWRITE
-FILE:/usr/local/include/SDL/begin_code.h:$OVERWRITE
-FILE:/usr/local/include/SDL/close_code.h:$OVERWRITE
+FILE:/usr/local/include/SDL:$OVERWRITE
 FILE:/usr/local/include/jconfig.h:$OVERWRITE
 FILE:/usr/local/include/jpeglib.h:$OVERWRITE
 FILE:/usr/local/include/jmorecfg.h:$OVERWRITE
