--- a/stepmania/configure.ac
+++ b/stepmania/configure.ac
@@ -27,7 +27,8 @@ AM_CONDITIONAL(NHAVE_SDL, test x$enable_sdl = xno )
 # sdl-config puts -L/usr/lib in the library search path, which reorders things
 # in a way that breaks some configurations.
 # Does this still need to be in?
-SDL_LIBS="`echo $SDL_LIBS | sed 's_-L/usr/lib/\?[[ $]]__'`"
+# not sure
+# SDL_LIBS="`echo $SDL_LIBS | sed 's_-L/usr/lib/\?[[ $]]__'`"
 
 # These tests break my custom build environment.  I'll put them back in later.
 #AC_SEARCH_LIBS(IMG_Load, [SDL_image], have_SDL_image=yes,  have_SDL_image=no)
