ARGH, I dunno what I was thinking. I had something else in mind at first but then changed it and forgot to update this. I'm going to get a million bug reports as a result

--- a/stepmania/PBProject/scripts/installer.config
+++ b/stepmania/PBProject/scripts/installer.config
@@ -59,23 +59,23 @@ FILE:Announcers/instructions.txt:OVERWRITE
 FILE:BGAnimations/instructions.txt:OVERWRITE
 FILE:CDTitles/instructions.txt:OVERWRITE
 FILE:Characters/instructions.txt:OVERWRITE
-FILE:NoteSkins/common/default:
-FILE:NoteSkins/dance/default:
-FILE:NoteSkins/dance/flat:
-FILE:NoteSkins/dance/note:
-FILE:NoteSkins/dance/solo:
-FILE:NoteSkins/pump/Classic:
-FILE:NoteSkins/pump/default:
+FILE:NoteSkins/common/default:OVERWRITE
+FILE:NoteSkins/dance/default:OVERWRITE
+FILE:NoteSkins/dance/flat:OVERWRITE
+FILE:NoteSkins/dance/note:OVERWRITE
+FILE:NoteSkins/dance/solo:OVERWRITE
+FILE:NoteSkins/pump/Classic:OVERWRITE
+FILE:NoteSkins/pump/default:OVERWRITE
 FILE:RandomMovies/instructions.txt:OVERWRITE
 FILE:Songs/instructions.txt:OVERWRITE
 RM:Themes/default
 FILE:Themes/instructions.txt:OVERWRITE
-FILE:Themes/default:
+FILE:Themes/default:OVERWRITE
 FILE:Data/Translation.dat:OVERWRITE
 FILE:Data/AI.ini:OVERWRITE
-FILE:Data/Unlocks.dat:
+FILE:Data/Unlocks.dat:OVERWRITE
 FILE:Data/VideoCardDefaults.ini:OVERWRITE
-FILE:Data/splash.bmp:
+FILE:Data/splash.bmp:OVERWRITE
 FILE:COPYING.txt:OVERWRITE
 FILE:README-FIRST.html:OVERWRITE
 FILE:NEWS:OVERWRITE
