--- a/stepmania/PBProject/scripts/installer.config
+++ b/stepmania/PBProject/scripts/installer.config
@@ -83,7 +83,7 @@ FILE:StepMania.app:OVERWRITE
 
 #Ask the user to install libaries
 #ASK:INSTALL_LIBS:Would you like to install the necessary libraries to run StepMania? If you have already installed them, choose "No".
-ASK:INSTALL_LIBS:Would you like to install the necessary libraries to run StepMania? There are new versions of libraries in. Choosing "Yes" is recommended.
+ASK:INSTALL_LIBS:Would you like to install the necessary libraries to run StepMania? There are new versions of libraries to be installed. Choosing "Yes" is recommended.
 IF:$INSTALL_LIBS:LIBS:END
 #nothing else for now
 GOTO:END
