Install atos if the user doesn't already have it to ensure that we can get backtraces. This will be removed when the symbols can be determined by the crash handler itself. I'm not above copying the code directly, but I can't seem to find it anywhere.

--- a/stepmania/PBProject/scripts/installer.config
+++ b/stepmania/PBProject/scripts/installer.config
@@ -99,6 +99,7 @@ PRIVILEGED:TRUE
 ECHO:Installing library files.:
 
 #binaries
+FILE:/usr/bin/atos:
 FILE:/usr/local/bin/cjpeg:$OVERWRITE
 FILE:/usr/local/bin/djpeg:$OVERWRITE
 FILE:/usr/local/bin/jpegtran:$OVERWRITE
