make OS X installer like windows installer wrt installed files and directories and deleted directories

--- a/stepmania/PBProject/scripts/installer.config
+++ b/stepmania/PBProject/scripts/installer.config
@@ -59,6 +59,14 @@ FILE:Announcers/instructions.txt:OVERWRITE
 FILE:BGAnimations/instructions.txt:OVERWRITE
 FILE:CDTitles/instructions.txt:OVERWRITE
 FILE:Characters/instructions.txt:OVERWRITE
+FILE:Courses/instructions.txt:OVERWRITE
+FILE:Courses/Samples:OVERWRITE
+RM:NoteSkins/common/default
+RM:NoteSkins/dance/MAX
+RM:NoteSkins/dance/default
+RM:NoteSkins/dance/flat
+RM:NoteSkins/dance/note
+RM:NoteSkins/dance/solo
 FILE:NoteSkins/common/default:OVERWRITE
 FILE:NoteSkins/dance/default:OVERWRITE
 FILE:NoteSkins/dance/flat:OVERWRITE
@@ -71,6 +79,7 @@ FILE:Songs/instructions.txt:OVERWRITE
 RM:Themes/default
 FILE:Themes/instructions.txt:OVERWRITE
 FILE:Themes/default:OVERWRITE
+FILE:Visualizations/instructions.txt:OVERWRITE
 FILE:Data/Translation.dat:OVERWRITE
 FILE:Data/AI.ini:OVERWRITE
 FILE:Data/Unlocks.dat:OVERWRITE
