--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1899,7 +1899,7 @@ WheelSpeed=Adjusts the speed of the DDR style music wheel.
 [ScreenMachineOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
 MenuTimer=Turn this &oq;OFF&cq; to disable the time limit in menus.
-SongsPerPlay=The number of songs a player can play in Arcade mode.::Set this to &oq;Unlimited&cq;, and you can continue playing forever.::Also, when this option is set to &oq;Unlimited&cq;, failing will take you::back to the the Select Music or Select Course screen.
+SongsPerPlay=The number of songs a player can play in Arcade mode.::Set this to &oq;Event Mode&cq;, and you can continue playing forever.::Also, when this option is set to &oq;Unlimited&cq;, failing will take you::back to the the Select Music or Select Course screen.
 ScoringType=Defines which scoring method to use.
 JudgeDifficulty=Increase this value to cause your steps to be judged more strictly::(i.e. shrink the timing window).
 LifeDifficulty=Increase this value to cause your life meter to::drain faster and refill slower.
