--- a/stepmania/configure.ac
+++ b/stepmania/configure.ac
@@ -168,6 +168,12 @@ case $host in
 	*-*-darwin*)
 		AC_DEFINE(DARWIN, 1, [Use different sound drivers than linux])
 		darwin=true;;
+	# This is just a general define for things we do in Linux that aren't
+	# yet fully generalized.  It should probably be defined in other *nixes,
+	# too.
+	*)
+		AC_DEFINE(LINUX, 1, [Linux])
+		;;
 esac
 AM_CONDITIONAL(DARWIN, test x$darwin = xtrue)
 
